# friff

./: Pipfile  README.md  api.py  build-requirements.txt  dev-requirements.txt  pyproject.toml  requirements.txt  script.py  settings.py  setup.py
.github/workflows/: main.yml  pycharm.yml
lib/: drivers.py  helpers.py  main.py  screenshot.py  settings.py
src/: drivers.py  helpers.py  install-chrome-driver.sh  main.py  screenshot.py
