[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "front_diff_checker_BENFTWC"
version = "0.0.1"
authors = [
  { name="Ben Cassinat", email="benftwc@gmail.com" },
]
description = "Using Selenium and its BrowserDrivers, it take's screenshots and compare them to get differences between two given environments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux based Systems",
]
